--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@ body {
   font-family: Arial,sans-serif;/* jenis font*/
   color: #191970;
  }
+.kartu-profil{
+  width: 300px;
+  margin: 50px auto;
+  padding: 20px
+  background-color: white;
+  border-radius: 15px;
+  box-shadow:0 4px 8px rgb(0,0,0,0.1);
+}
