--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   width: 300px;
   margin: 50px auto;
   padding: 20px
-  background-color: black;
+  background-color: white;
   border-radius: 15px;
   box-shadow:0 4px 8px rgb(0,0,0,0.1);
 }
