--- a/style.css
+++ b/style.css
@@ -9,5 +9,5 @@ body {
   padding: 20px;
   background-color: white;
   border-radius: 15px;
-  box-shadow:0 4px 8px rgb(0,0,0,0.1);
+  box-shadow:0 4px 8px rgba(0,0,0,0.1);
 }
