--- a/style.css
+++ b/style.css
@@ -10,4 +10,9 @@ body {
   background-color: white;
   border-radius: 15px;
   box-shadow:0 4px 8px rgba(0,0,0,0.1);
+  text-align: center;
+}
+.kartu-profil img{
+  width: 150 px;
+  border-radius: 50%;
 }
